@@ -141,7 +141,7 @@ public abstract class AbstractIPResourceServiceTest extends AbstractBasics {
             // Create or get
             T resource;
             if (internalId == null) {
-                resource = resourceEditor.getForResourceType().newInstance();
+                resource = resourceEditor.getForResourceType().getConstructor().newInstance();
             } else {
                 resource = (T) getCommonServicesContext().getResourceService().resourceFind(internalId).get();
             }
